mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/AuthenticationException.java
package com.example.mdd_backend.errors.exceptions;

public class AuthenticationException extends RuntimeException {
    public AuthenticationException(String message) {
        super(message);
    }
}
